<?xml version="1.0"?>
<package format="2">
  <name>ira_laser_tools</name>
  <version>1.0.4</version>
  <description>The ira_laser_tools package. These nodes are meant to provide some utils for lasers, like listen to different laser scan sources and merge them in a single scan or generate virtual laser scans from a pointcloud.</description>

  <url>http://www.ros.org/wiki/ira_laser_tools</url>
  <maintainer email="augusto.ballardini@unimib.it">Augusto</maintainer>
  <maintainer email="p.colombo45@campus.unimib.it">Pietro</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>laser_geometry</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
